# SDL_gui

./: .gitignore  LICENSE  README.md
SDL2/: aclocal.m4
SDL2/VisualC/: .gitignore
SDL2/VisualC/SDL/: SDL.vcxproj
SDL2/VisualC/SDLmain/: SDLmain.vcxproj
SDL2/VisualC/SDLtest/: SDLtest.vcxproj
SDL2/autom4te.cache/: output.0  requests  traces.0
SDL2/test/autom4te.cache/: output.0  requests  traces.0
SDL2_gfx/: SDL2_gfxPrimitives.bc  SDL2_gfxPrimitives.c
SDL2_gui/: GUI_App.cpp  GUI_App.h  GUI_Button.cpp  GUI_Button.h  GUI_CheckBox.cpp  GUI_CheckBox.h  GUI_ComboBox.cpp  GUI_ComboBox.h  GUI_Config.cpp  GUI_Config.h  GUI_EditText.cpp  GUI_EditText.h  GUI_Fonts.cpp  GUI_Fonts.h  GUI_IconView.cpp  GUI_IconView.h  GUI_ImageView.bc  GUI_ImageView.cpp  GUI_ImageView.h  GUI_Label.cpp  GUI_Label.h  GUI_List.cpp  GUI_List.h  GUI_Menu.cpp  GUI_Menu.h  GUI_MenuBar.cpp  GUI_MenuBar.h  GUI_MessageBox.cpp  GUI_MessageBox.h  GUI_PopupView.cpp  GUI_PopupView.h  GUI_Preference.cpp  GUI_RadioButton.cpp  GUI_RadioButton.h  GUI_RadioButtonGroup.cpp  GUI_RadioButtonGroup.h  GUI_ScrollView.cpp  GUI_ScrollView.h  GUI_Slider.cpp  GUI_Slider.h  (+26 more)
SDL2_image/: Android.mk  IMG_pnm.c  configure
SDL2_image/VisualC/: SDL_image.vcxproj
SDL2_image/VisualC/showimage/: showimage.vcxproj
SDL2_image/Xcode-iOS/SDL_image.xcodeproj/: project.pbxproj
SDL2_image/Xcode/SDL_image.xcodeproj/: project.pbxproj
SDL2_mixer/: configure
SDL2_mixer/VisualC/: SDL_mixer.vcxproj
SDL2_mixer/VisualC/native_midi/: native_midi.vcxproj
SDL2_mixer/VisualC/playmus/: playmus.vcxproj
SDL2_mixer/VisualC/playwave/: playwave.vcxproj
SDL2_mixer/VisualC/timidity/: timidity.vcxproj
SDL2_net/: Makefile.in  configure
SDL2_net/VisualC/: SDL_net.vcxproj
SDL2_ttf/: Makefile.in  configure
SDL2_ttf/VisualC/: .gitignore  SDL_ttf.vcxproj
SDL2_ttf/VisualC/glfont/: glfont.vcxproj
SDL2_ttf/VisualC/showfont/: showfont.vcxproj
SDL2_ttf/Xcode-iOS/SDL_ttf.xcodeproj/: project.pbxproj
SDL2_ttf/Xcode/SDL_ttf.xcodeproj/: project.pbxproj
SDL2_ttf_HarfBuzz/: .gitignore  Android.mk  SDL_ttf.bc  SDL_ttf.cpp  SDL_ttf.h
SDL2_ttf_HarfBuzz/VisualC/: SDL_ttf.vcxproj  SDL_ttf.vcxproj.filters
SDL2_ttf_HarfBuzz/VisualC/glfont/: glfont.vcxproj
SDL2_ttf_HarfBuzz/VisualC/showfont/: showfont.vcxproj
SDL2_ttf_HarfBuzz/Xcode/: Info-Framework.plist
SDL2_ttf_HarfBuzz/Xcode-iOS/SDL_ttf.xcodeproj/: project.pbxproj
SDL2_ttf_HarfBuzz/Xcode/SDL2_ttf/: SDL2_ttf.h  SDL2_ttf.m
SDL2_ttf_HarfBuzz/Xcode/SDL2_ttf.xcodeproj/: project.pbxproj
SDL_gui/: GUI_BasicWidgets.cpp  GUI_BasicWidgets.h  GUI_MainWin.cpp  GUI_MainWin.h  GUI_TopWin.cpp  GUI_TopWin.h  GUI_WinBase.cpp  GUI_WinBase.h  GUI_iOS.h  GUI_iOS.mm  GUI_utils.cpp  GUI_utils.h  SDL_gui.cpp  SDL_gui.h  pantone.h  xpm.h
test/0020_ClearScreen/_Android/: AndroidManifest.xml
test/0020_ClearScreen/_RPi/: makefile.1  test
test/0020_ClearScreen/_emscripten/: build.sh  sdl2.html.mem  sdl2.js
test/0020_ClearScreen/src/: main.cpp
test/0030_LoadTexture/_RPi/: test
test/0030_LoadTexture/_emscripten/: build.sh  sdl2.data  sdl2.html.mem  sdl2.js
test/0030_LoadTexture/src/: Android.mk  main.cpp
test/0040_RenderTexture/_Android/: jni_rebuild.sh  logcat.sh
test/0040_RenderTexture/_RPi/: build.sh  makefile  test
test/0040_RenderTexture/_emscripten/: sdl2.html.mem  sdl2.js
test/0040_RenderTexture/src/: Android.mk  main.cpp
test/0050_Event/_Android/: local.properties  logcat.sh
test/0050_Event/_RPi/: test
test/0050_Event/_emscripten/: sdl2.data  sdl2.html.mem  sdl2.js
test/0050_Event/src/: Android.mk  main.cpp
test/0060_SDL_Image/_Android/: AndroidManifest.xml  android_build.sh  jni_rebuild.sh
test/0060_SDL_Image/_RPi/: makefile  test
test/0060_SDL_Image/_emscripten/: build.sh  sdl2.data  sdl2.html.mem  sdl2.js
test/0060_SDL_Image/src/: Android.mk  main.cpp
test/0070_SDL_ttf/_Android/: jni_rebuild.sh
test/0070_SDL_ttf/_RPi/: makefile  test
test/0070_SDL_ttf/_emscripten/: build.sh  sdl2.data  sdl2.html.mem  sdl2.js
test/0070_SDL_ttf/src/: Android.mk  main.cpp
test/0080_Shapes/_Android/: android_build.sh  jni_rebuild.sh
test/0080_Shapes/_RPi/: test
test/test/: sdl2_canvas_blank.c
tests/0010_ClearScreen/: CMakeLists.txt  jni_setup.sh
tests/0010_ClearScreen/_cmake/: .gitignore  CMakeCache.txt  CMakeLists.txt  ClearScreen  Makefile  cmake_install.cmake
tests/0030_SDL_image/_cmake/: CMakeLists.txt
tests/0030_SDL_ttf_HarfBuzz/_cmake/: CMakeLists.txt
tests/0050_SDL_ttf_HarfBuzz/_cmake/: CMakeLists.txt
tests/0050_SDL_ttf_HarfBuzz/_cmake/modules/: FindHARFBUZZ.cmake
tests/0060_GUI_LayoutAlign/_cmake/: CMakeLists.txt
tests/0060_GUI_LayoutAlign/_cmake/modules/: FindHARFBUZZ.cmake
tests/0100_GUI_App(Skia)/skia/modules/skgui/: BUILD.gn  skgui.gni
tests/0100_GUI_App(Skia)/skia/modules/skgui/include/: GUI_App.h  GUI_CheckBox.h  GUI_ComboBox.h  GUI_Config.h  GUI_EditText.h  GUI_Fonts.h  GUI_IconView.h  GUI_ImageView.h  GUI_Label.h  GUI_Menu.h  GUI_MenuBar.h  GUI_MessageBox.h  GUI_PopupView.h  GUI_Preference.h  GUI_ScrollView.h  GUI_Switch.h  GUI_TextUtil.h  GUI_TextView.h  GUI_Utils.h  GUI_View.h  GUI_image.h  GUI_shapes.h  skgui.h
tests/0100_GUI_App(Skia)/skia/modules/skgui/src/: GUI_App.cpp  GUI_CheckBox.cpp  GUI_ComboBox.cpp  GUI_Config.cpp  GUI_EditText.cpp  GUI_Fonts.cpp  GUI_IconView.cpp  GUI_ImageView.cpp  GUI_Label.cpp  GUI_List.cpp  GUI_Menu.cpp  GUI_MenuBar.cpp  GUI_MessageBox.cpp  GUI_PopupView.cpp  GUI_RadioButton.cpp  GUI_RadioButtonGroup.cpp  GUI_Slider.cpp  GUI_Switch.cpp  GUI_TextUtil.cpp  GUI_TextView.cpp  GUI_TopBar.cpp  GUI_Utils.cpp  GUI_View.cpp  GUI_image.cpp  GUI_shapes.cpp  skgui.cpp
(+416 files in other folders)
